--- a/style.css
+++ b/style.css
@@ -1,3 +1,11 @@
+body {
+    margin: 0;
+    padding: 0;
+    font-family: Arial, sans-serif;
+    height: 100vh;
+    overflow: hidden;
+}
+
 .cell {
     flex-grow: 1;
     aspect-ratio: 1;
@@ -14,6 +22,7 @@
     display: flex;
     flex-direction: row;
 }
+
 #tetris {
     display: flex;
     flex-direction: column;
@@ -48,4 +57,8 @@
 
 .Z {
     background-color: red;
+}
+
+.I {
+    background-color: cyan;
 }
