can play more than 2 as for subject mention with their shitty phrasing. Handle death and room cleaning after game. Player can directly relaunch after game. Winner is sent to all players. Spectral looks weird in some situation also need to check for diconnect handling as it is a bit scuffed

--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@ body {
     display:flex;
     flex-direction: column;
     width: 50vw;
+    max-width: 450px;
 }
 
 .row {
@@ -91,6 +92,10 @@ body {
     border: 1px solid black;
 }
 
+.phantom-board h3{
+    text-align: center;
+    border-bottom: 1px solid black;
+}
 .phantom-row {
     display: flex;
     flex-direction: row;
