--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@ body {
     display:flex;
     flex-direction: column;
     width: 50vw;
+    max-width: 450px;
 }
 
 .row {
@@ -75,6 +76,9 @@ body {
 
 .spec {
     border: 0.5px solid rgba(255, 0, 0, 0.521);
+    box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
 }
 .phantom-cell {
     flex-grow: 1;
@@ -85,10 +89,13 @@ body {
     display:flex;
     flex-direction: column;
     width: 20vw;
-    height: 40vh;
     border: 1px solid black;
 }
 
+.phantom-board h3{
+    text-align: center;
+    border-bottom: 1px solid black;
+}
 .phantom-row {
     display: flex;
     flex-direction: row;
