--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ body {
     display: flex;
     flex-direction: column;
     width: 50vw;
-    max-width: 450px;
+    max-width: 400px;
     margin: 20px;
     border: 2px solid #333;
     border-radius: 8px;
@@ -103,7 +103,7 @@ body {
 .phantom-board h3 {
     text-align: center;
     border-bottom: 1px solid #333;
-    padding: 10px;
+    margin:0px;
 }
 
 .phantom-row {
@@ -160,6 +160,11 @@ body {
 }
 
 .specBoard {
+    display: flex;
+    flex-direction: column;
+    flex-grow: 0.2;
+}
+.header {
     display: flex;
     flex-direction: column;
 }
